--- a/scss/_E-topTwo.scss
+++ b/scss/_E-topTwo.scss
@@ -9,7 +9,7 @@
     background-image: url('../images/E-topTwo/topTwobgOne.png');
     width: 100%;
     height: 295px;
-    background-color: rgb(77, 139, 85);
+    background-color: #4d8b55;
 
     @include breakPoints(small) {
       height: 185px;
