--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,7 +10,8 @@
 @import '../scss/_J-midFour.scss';
 @import '../scss/_K-bottomOne.scss';
 @import '../scss/_L-bottomTwo.scss';
-@import '../scss/_M-bottomTHREE.scss';
+@import '../scss/_M-bottomThree.scss';
+@import '../scss/_N-footer.scss';
 
 * {
   margin: 0;
